tests/snapshots/imports__imports__indented_second_import_fails.snap
---
source: tests/imports.rs
expression: result

---
Token not at line start.

error: 
  ┌─ sample:3:3
  │
3 │   import Impl.Test.Other exposing (hello)
  │   ^^^^^^


